--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 MONGODB_URI="mongodb://mongo:27017/timichemdb"
 NODE_ENV=development
-VITE_API_BASE_URL="http://localhost:5000/api"
+VITE_API_BASE_URL="http://192.168.0.178:5000/api"
